--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
-fastapi
-uvicorn
-gunicorn
-python-dotenv
-flask-cors
-google-generativeai
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+gunicorn==21.2.0
+python-multipart==0.0.9
+pydantic==2.6.4
+requests==2.31.0
+aiohttp==3.9.3
+google-generativeai==0.3.2
+Pillow==10.2.0
+numpy==1.26.4
+python-dotenv==1.0.1
