--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,13 @@ python-multipart==0.0.9
 pydantic==2.6.4
 requests==2.31.0
 aiohttp==3.9.3
-google-generativeai==0.3.2
+google-generativeai==0.8.3
 Pillow==10.2.0
 numpy==1.26.4
 python-dotenv==1.0.1
 gTTS==2.5.1
+flask-cors==4.0.0
+moviepy==1.0.3
+imageio==2.33.1
+imageio-ffmpeg==0.4.9
+openai==1.14.0
