--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,18 @@
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-gunicorn==21.2.0
-python-multipart==0.0.9
-pydantic==2.6.4
-requests==2.31.0
-aiohttp==3.9.3
-google-generativeai==0.8.3
-Pillow==10.2.0
-numpy==1.26.4
-python-dotenv==1.0.1
-gTTS==2.5.1
-flask-cors==4.0.0
+# Web Sunucusu ve API
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+
+# Video ve Görüntü İşleme (MoviePy için kritik versiyon)
 moviepy==1.0.3
-imageio==2.33.1
-imageio-ffmpeg==0.4.9
-openai==1.14.0
+numpy==1.24.3
+Pillow==9.5.0
+
+# Yapay Zeka ve API Bağlantıları
+google-generativeai==0.3.1
+requests==2.31.0
+pydantic==2.5.2
+
+# Ses ve Diğer Araçlar
+gTTS==2.4.0
+python-dotenv==1.0.0
